force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/giic_JMSIntegrationMapping__mdt.object-meta.xml
<CustomObject>
    <label>JMS Integration Mapping</label>
    <pluralLabel>JMS Integration Mappings</pluralLabel>
</CustomObject>