force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>giic_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>