force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_CLIENT_KEY__c.field-meta.xml
<CustomField>
    <fullName>giic_CLIENT_KEY__c</fullName>
    <label>CLIENT KEY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>