force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>giic_Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>