force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_Fedex_Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>giic_Fedex_Packaging_Type__c</fullName>
    <label>Fedex Packaging Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>