force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>giic_Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEDEX</fullName>
                <default>true</default>
                <label>FEDEX</label>
            </value>
            <value>
                <fullName>PLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>