force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_OAUTH_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>giic_OAUTH_Endpoint__c</fullName>
    <label>OAUTH Endpoint</label>
    <type>Url</type>
</CustomField>