force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>giic_PASSWORD__c</fullName>
    <label>PASSWORD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>