force-app/main/default/objects/giic_JMSIntegrationMapping__mdt/fields/giic_USERNAME__c.field-meta.xml
<CustomField>
    <fullName>giic_USERNAME__c</fullName>
    <label>USERNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>